# sukyTradinBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backtest/: export_report_data.py  optimize_sma.py  report_data.json  report_data_embed.json  sma_crossover.py  source-serif-var.b64  source_serif.css
benchmarks/: README.md  v0.10-nlp-news-engine.json  v0.11-signal-orchestration.json  v0.3-feature-engineering.json  v0.4-hmm-regime-detection.json  v0.5-strategy-engine.json  v0.6-risk-management.json  v0.7-execution-layer.json  v0.8-backtesting.json  v0.9-memory-loop.json
config/: app.example.yaml  feature_manifest.yaml
docs/: Compatibility.md
docs/engineering-handbook/: 00_MASTER_CHARTER.md  02_TECHNICAL_PLANNER.md  03_BACKEND_ENGINEER.md  04_QUANT_RESEARCHER.md  05_MEMORY_ENGINEER.md  07_SIGNAL_ORCHESTRATOR.md  08_RISK_MANAGER.md  09_QA_ENGINEER.md  11_DOCUMENTATION_ENGINEER.md  12_DEVOPS_ENGINEER.md  README.md
docs/operations/: backup-restore.md  disaster-recovery.md  incident-response.md  on-call-guide.md  production-checklist.md  release-runbook.md
regime-trader/: main.py
regime-trader/broker/: alpaca_client.py  news_streamer.py  order_executor.py
regime-trader/core/: hmm_engine.py  learning_engine.py  risk_manager.py  sentiment_engine.py
regime-trader/data/: feature_engineering.py
src/app/: __init__.py  bootstrap.py  buffer.py  config.py  exceptions.py  execution_loop.py  features_loop.py  frame.py  main.py  orchestration_loop.py  pipeline.py  regime_loop.py  risk_loop.py  runtime.py  strategy_loop.py
src/backtest/: __init__.py  config.py  engine.py  exceptions.py  interfaces.py  models.py  portfolio.py  replay.py  reporting.py
src/common/: __init__.py  __main__.py  config.py  errors.py  interfaces.py  io.py  logging.py  retry.py  time.py
src/execution/: __init__.py  broker_adapter.py  config.py  exceptions.py  execution_service.py  interfaces.py  models.py  order_builder.py  providers.py  retry.py  router.py  stop_loss.py
src/features/: __init__.py  errors.py  feature_vector.py  manifest.py  market_structure.py  pipeline.py  price.py  regime.py  registry.py  statistical.py  trend.py  validation.py  volatility.py  volume.py
src/hmm/: __init__.py  config.py  exceptions.py  inference.py  interfaces.py  models.py  normalizer.py  persistence.py  selector.py  service.py  trainer.py
src/market_data/: __init__.py  auth.py  errors.py  interfaces.py  models.py  rate_limit.py  replay.py  validation.py
src/memory/: __init__.py  bandit.py  config.py  evaluation.py  exceptions.py  interfaces.py  models.py  service.py  store.py
src/nlp/: __init__.py  evaluation.py  exceptions.py  interfaces.py  models.py  normalize.py  sentiment.py  service.py  store.py
src/ops/: __init__.py  alerts.py  checks.py  deployment.py  diagnostics.py  exceptions.py  health.py  interfaces.py  logging.py  metrics.py  models.py  reporting.py  rollback.py  secrets.py  startup.py  tracing.py  validation.py
src/orchestration/: __init__.py  arbitration.py  config.py  evaluation.py  exceptions.py  interfaces.py  models.py  signals.py
src/risk/: __init__.py  circuit_breakers.py  config.py  exceptions.py  interfaces.py  limits.py  models.py  service.py  sizing.py  validators.py
src/strategy/: __init__.py  config.py  exceptions.py  interfaces.py  models.py  registry.py  service.py
tests/: conftest.py
tests/app/: test_bootstrap.py  test_buffer.py  test_config.py  test_execution_loop.py  test_features_loop.py  test_frame.py  test_main.py  test_orchestration_loop.py  test_pipeline.py  test_regime_loop.py  test_risk_loop.py  test_runtime.py  test_strategy_loop.py
tests/backtest/: conftest.py  test_config.py  test_engine.py  test_metrics.py  test_models.py  test_portfolio.py  test_replay.py
tests/common/: test_config.py  test_errors.py  test_interfaces.py  test_io.py  test_logging.py  test_main.py  test_retry.py  test_time.py
tests/contracts/: test_backtestresult_contract.py  test_executiondecision_contract.py  test_featurevector_contract.py  test_finaldecision_contract.py  test_learningdecision_contract.py  test_newssignal_contract.py  test_orderintent_contract.py  test_regimestate_contract.py  test_strategydecision_contract.py
tests/execution/: conftest.py  test_broker_adapter.py  test_execution_service.py  test_models.py  test_order_builder.py  test_providers.py  test_retry.py  test_router.py  test_stop_loss.py
tests/features/: conftest.py  test_edge_cases.py  test_feature_vector.py  test_manifest.py  test_market_structure.py  test_no_lookahead_all_features.py  test_performance.py  test_pipeline.py  test_price.py  test_regime.py  test_registry.py  test_statistical.py  test_trend.py  test_validation.py  test_volatility.py  test_volume.py
tests/hmm/: conftest.py  test_inference.py  test_models.py  test_normalizer.py  test_performance.py  test_persistence.py  test_quantitative.py  test_reproducibility.py  test_selector.py  test_service.py  test_service_integration.py  test_trainer.py
tests/market_data/: conftest.py  test_alpaca_historical.py  test_alpaca_streaming.py  test_auth.py  test_interfaces.py  test_models.py  test_rate_limit.py  test_replay.py  test_storage_duckdb.py  test_storage_parquet.py  test_validation.py
tests/memory/: test_bandit.py  test_config.py  test_evaluation.py  test_models.py  test_performance.py  test_service.py  test_store.py
tests/nlp/: test_evaluation.py  test_models.py  test_normalize.py  test_performance.py  test_sentiment.py  test_sentiment_integration.py  test_service.py  test_store.py
tests/ops/: test_alerts.py  test_checks.py  test_deployment.py  test_diagnostics.py  test_health.py  test_logging.py  test_metrics.py  test_models.py  test_reporting.py  test_rollback.py  test_secrets.py  test_startup.py  test_tracing.py  test_validation.py
tests/orchestration/: conftest.py  test_arbitration.py  test_config.py  test_evaluation.py  test_models.py  test_performance.py
(+126 files in other folders)
