[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-trader"
version = "0.1.0"
description = "Regime Trader — engineering foundation (Milestone 1). See docs/engineering-handbook/."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Regime Trader Engineering" }]
# NOTE on the 3.9 floor: this is the newest interpreter available in the
# environment this foundation was built and verified against (see
# docs/engineering-handbook/Architecture/Known Gaps.md, tooling-scope note).
# Raise it deliberately, in its own change, once the team standardizes on a
# newer interpreter — don't let it drift silently either direction.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Private :: Do Not Upload",
]

# Base runtime dependencies: only what `src/common` (the foundation package)
# actually imports. `regime-trader/` and `backtest/` are pre-existing,
# unpackaged code trees this milestone deliberately does not touch — their
# dependencies are declared separately under the `trading` extra below so
# the distinction between "foundation" and "trading platform" dependencies
# stays explicit rather than one undifferentiated pile.
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
# Tooling used to develop and verify this repository. Not required to run
# the foundation package itself.
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
    "types-PyYAML",
]
# Runtime dependencies of the pre-existing regime-trader/ and backtest/ code
# trees, declared here for installability and documentation purposes only —
# Milestone 1 does not build, modify, or exercise any code that imports
# these. See docs/engineering-handbook/Architecture/Known Gaps.md.
trading = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "hmmlearn>=0.3",
    "torch>=2.1",
    "transformers>=4.35",
    "ta>=0.11",
    "alpaca-py>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["common*"]

[tool.setuptools.package-data]
common = ["py.typed"]

# --------------------------------------------------------------------------
# Ruff (lint + import sort). Scoped to the foundation package and its tests
# only — see the tooling-scope note in
# docs/engineering-handbook/Architecture/Known Gaps.md for why
# regime-trader/ and backtest/ are deliberately excluded for now rather than
# silently reformatted or lint-fixed as a side effect of this milestone.
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]
extend-exclude = ["regime-trader", "backtest", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is black's job
]

[tool.ruff.lint.isort]
known-first-party = ["common"]

[tool.ruff.format]
# Formatting is Black's responsibility (see [tool.black] below); Ruff is
# configured for lint + import-order only so the two tools never fight over
# the same file.

# --------------------------------------------------------------------------
# Black (formatting). Same scope note as Ruff above.
# --------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = '''
(
  ^/regime-trader/
  | ^/backtest/
)
'''

# --------------------------------------------------------------------------
# MyPy (type checking). Strict on the foundation package; regime-trader/ and
# backtest/ are excluded for the same reason as above — they predate this
# milestone's tooling and haven't been brought under it yet.
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
mypy_path = "src"
files = ["src", "tests"]
exclude = "^(regime-trader|backtest)/"
strict = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=common --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/common"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
