[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-trader"
version = "0.1.0"
description = "Regime Trader — engineering foundation (Milestone 1). See docs/engineering-handbook/."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Regime Trader Engineering" }]
# NOTE on the 3.9 floor: this is the newest interpreter available in the
# environment this foundation was built and verified against (see
# docs/engineering-handbook/Architecture/Known Gaps.md, tooling-scope note).
# Raise it deliberately, in its own change, once the team standardizes on a
# newer interpreter — don't let it drift silently either direction.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Private :: Do Not Upload",
]

# Base runtime dependencies: only what `src/common` (the foundation package)
# actually imports. `regime-trader/` and `backtest/` are pre-existing,
# unpackaged code trees this milestone deliberately does not touch — their
# dependencies are declared separately under the `trading` extra below so
# the distinction between "foundation" and "trading platform" dependencies
# stays explicit rather than one undifferentiated pile.
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
# Tooling used to develop and verify this repository. Not required to run
# the foundation package itself.
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
    "types-PyYAML",
]
# Runtime dependencies of `src/market_data` (Milestone 2) — a real,
# first-party package under this same tooling, unlike `trading` below. See
# docs/engineering-handbook/Architecture/ADR/ADR-002-Market-Data.md
# "Decision 5" for why this is split out from `trading` rather than folded
# into it: market_data needs none of `trading`'s HMM/NLP-specific weight
# (scipy, hmmlearn, torch, transformers, ta).
market-data = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "alpaca-py>=0.13",
]
# Runtime dependencies of `src/features` (Milestone 3). Depends on
# `market_data.models`/`market_data.validation` at import time (for `Bar`
# and bar-cleaning reuse — see
# docs/engineering-handbook/Architecture/ADR/ADR-003-Feature-Engineering.md),
# but neither of those modules themselves import pyarrow/duckdb/alpaca-py,
# so installing this extra alone is enough — it does not pull in the rest
# of `market-data`'s heavier dependencies.
features = [
    "pandas>=2.0",
    "numpy>=1.26",
    "ta>=0.11",
]
# Runtime dependencies of `src/hmm` (Milestone 4). Depends on `features.
# feature_vector`/`features.pipeline` at import time (for the `FeatureVector`
# contract and `PIPELINE_VERSION` -- see
# docs/engineering-handbook/Architecture/ADR/ADR-007-HMM-Design.md), and on
# `common` for `Clock`/`atomic_write_json`, but never on `market_data` --
# this package never touches a raw bar. `scipy` is the forward-algorithm
# log-space math (`logsumexp`, `multivariate_normal`); `hmmlearn` is the
# Baum-Welch/EM trainer. Neither pulls in `market-data`'s or `trading`'s
# heavier dependencies (pyarrow, duckdb, alpaca-py, torch, transformers).
hmm = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "hmmlearn>=0.3",
]
# `src/strategy` (Milestone 5) deliberately has no extras group of its
# own: it depends only on `features.feature_vector` and `hmm.models` at
# import time (for the `FeatureVector`/`RegimeState` types) plus `common`
# -- no direct third-party dependency, so installing `.[dev,features,hmm]`
# already makes `strategy` importable. See
# docs/engineering-handbook/Architecture/ADR/ADR-009-Strategy-Engine-Design.md.
# `src/risk` (Milestone 6) similarly has no extras group of its own: it
# depends only on `strategy.models` (for the `StrategyDecision` type) plus
# `common` -- no direct third-party dependency, so installing
# `.[dev,features,hmm]` already makes `risk` importable too. See
# docs/engineering-handbook/Architecture/ADR/ADR-010-ExecutionDecision-Contract.md.
# Runtime dependencies of the pre-existing regime-trader/ and backtest/ code
# trees, declared here for installability and documentation purposes only —
# regime-trader/'s own trading logic (core/, broker/ minus the Milestone 2
# adapter) remains untouched by this repository's own tooling. See
# docs/engineering-handbook/Architecture/Known Gaps.md.
trading = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "hmmlearn>=0.3",
    "torch>=2.1",
    "transformers>=4.35",
    "ta>=0.11",
    "alpaca-py>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["common*", "market_data*", "features*", "hmm*", "strategy*", "risk*"]

[tool.setuptools.package-data]
common = ["py.typed"]
market_data = ["py.typed"]
features = ["py.typed"]
hmm = ["py.typed"]
strategy = ["py.typed"]
risk = ["py.typed"]

# --------------------------------------------------------------------------
# Ruff (lint + import sort). Scoped to the foundation/market-data packages
# and their tests — see the tooling-scope note in
# docs/engineering-handbook/Architecture/Known Gaps.md for why
# regime-trader/ and backtest/ are otherwise excluded. The one deliberate
# exception, regime-trader/broker/alpaca_client.py (Milestone 2's new
# adapter), is checked explicitly by CI/pre-commit passing its path
# alongside `src tests` — an explicit path always overrides `extend-exclude`
# for Ruff, Black, and MyPy alike (verified against this repo's own
# tooling), so no change to `extend-exclude` itself is needed for that.
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]
extend-exclude = ["regime-trader", "backtest", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is black's job
]

[tool.ruff.lint.isort]
known-first-party = ["common", "market_data", "features", "hmm", "strategy", "risk"]

[tool.ruff.format]
# Formatting is Black's responsibility (see [tool.black] below); Ruff is
# configured for lint + import-order only so the two tools never fight over
# the same file.

# --------------------------------------------------------------------------
# Black (formatting). Same scope note as Ruff above — invoked with
# regime-trader/broker/alpaca_client.py passed explicitly alongside
# `src tests` in CI/pre-commit; `extend-exclude` below does not apply to a
# path passed explicitly.
# --------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = '''
(
  ^/regime-trader/
  | ^/backtest/
)
'''

# --------------------------------------------------------------------------
# MyPy (type checking). Strict on the foundation/market-data packages;
# regime-trader/ and backtest/ are excluded for the same reason as above.
# `regime-trader/broker/alpaca_client.py` is listed explicitly in `files`
# below (see the Ruff section's note) since it's new Milestone 2 code, not
# pre-existing untyped code the exclude is protecting.
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
mypy_path = "src:regime-trader"
files = ["src", "tests", "regime-trader/broker/alpaca_client.py"]
exclude = "^(regime-trader|backtest)/"
strict = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
    "duckdb.*",
    "duckdb",
    "pyarrow.*",
    "pandas.*",
    "pandas",
    "ta.*",
    "ta",
    "hmmlearn.*",
    "scipy.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# "regime-trader" is on the path so tests can import its modules (e.g.
# `broker.alpaca_client`) the same way regime-trader/main.py itself does --
# it is not a separately installed package. Contract tests for the
# Milestone 2 adapter at regime-trader/broker/alpaca_client.py are the only
# consumer of this today; see tests/regime_trader/.
pythonpath = ["src", "regime-trader"]
addopts = "-ra --strict-markers --cov=common --cov=market_data --cov=features --cov=hmm --cov=strategy --cov=risk --cov-report=term-missing"
markers = [
    "performance: measures wall-clock performance against a milestone's documented targets (slower; see tests/features/test_performance.py and tests/hmm/test_performance.py)",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # Environment-specific, harmless: some local/CI interpreters link against
    # LibreSSL instead of OpenSSL 1.1.1+; urllib3 v2 warns about it on import.
    # Matched by message text, not `::urllib3.exceptions.NotOpenSSLWarning` --
    # resolving that dotted path requires importing urllib3, which re-triggers
    # the very warning being filtered before the filter is registered. Ignored
    # here rather than weakening "error" globally -- see
    # docs/engineering-handbook/Architecture/Known Gaps.md tooling-scope note.
    "ignore:urllib3 v2 only supports OpenSSL.*",
    # alpaca-py 0.43.5 internally imports `websockets.legacy`, deprecated by
    # the `websockets` package itself -- an upstream alpaca-py compatibility
    # gap, not something first-party code can fix. Revisit when alpaca-py
    # migrates off the legacy websockets API.
    "ignore:websockets.legacy is deprecated.*",
    # pandas' Cython rolling-window kurtosis/skew (`roll_kurt`/`roll_skew`)
    # call `numpy.nanmin`/`nanmax` on the window internally even when the
    # entire window is NaN -- an expected, harmless outcome of computing
    # rolling_kurtosis_20/rolling_skew_20 over the insufficient-history
    # warmup period (see tests/features/test_edge_cases.py). Scoped to
    # RuntimeWarning specifically so it can't mask an unrelated warning
    # with the same message text from first-party code.
    "ignore:All-NaN slice encountered:RuntimeWarning",
]

[tool.coverage.run]
source = ["src/common", "src/market_data", "src/features", "src/hmm", "src/strategy", "src/risk"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
